<resources>
    <string name="app_name">YAKOI</string>
    <string name="description">Description:</string>
    <string name="personne">Personnes</string>
    <string name="interieur">Intérieur</string>
    <string name="exterieur">Extérieur</string>
    <string name="pmr">PMR</string>
    <string name="malentendant">Malentendant</string>
    <string name="malvoyant">Malvoyant</string>
    <string name="enfant">Enfant</string>
    <string name="numero2">Etape Numero 2</string>
    <string name="agee">Personne Agée</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Sport">Sport</string>
    <string name="New_Event">Nouvel évènement</string>
    <string name="Titre">Titre :</string>
    <string name="Description">Description :</string>
    <string name="SelectImage">Selectionnez une image: </string>
    <string name="SelectTheme">Selectionnez un thème: </string>
    <string name="SelectLogo">Selectionnez un logo pour votre activité: </string>
    <string name="SelectType">Type d\'activité:  </string>
    <string name="Reguliere">Régulière</string>
    <string name="Ponctuelle">Ponctuelle</string>
    <string name="VotreSite">www.VotreSiteInternet.com</string>
    <string name="VotreTelephone">Votre téléphone</string>
    <string name="VotreMail">Votre adresse e-mail</string>
    <string name="Numero">N°</string>
    <string name="Rue">Rue</string>
    <string name="CodePostal">CP</string>
    <string name="Ville">Ville</string>
    <string name="Date">Date</string>
    <string name="Horaire">Horaires</string>
    <string name="HoraireDeb">Heure d\'ouverture</string>
    <string name="HoraireFin">Heure de fermeture</string>
    <string name="MoyenPaiement">Moyens de paiements</string>
    <string name="CarteBleue">Carte Bleue</string>
    <string name="Cheque">Chèques</string>
    <string name="Especes">Espèces</string>
    <string name="PayPal">PayPal</string>
    <string name="Autre">Autre</string>
    <string name="Environnement">Environnement</string>
    <string name="Interieur">Intérieur</string>
    <string name="Exterieur">Extérieur</string>
    <string name="LesDeux">Les deux</string>
    <string name="Capacite">Capacité </string>
    <string name="SansLimite">Sans Limite</string>
    <string name="Accessibilite">Accessibilite</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="connectionButton">Se connnecter</string>
    <string name="registerButton">S\'inscrire</string>
    <string name="NumeroEtape">1</string>
    <string name="AddUserEtape1">Etape 1/5</string>
    <string name="AddUserEtape2">Etape 2/5</string>
    <string name="AddUserEtape3">Etape 3/5</string>
    <string name="AddUserEtape4">Etape 4/5</string>
    <string name="AddUserEtape5">Etape 5/5</string>
    <string name="Sexe">sexe</string>
    <string name="Femme">Femme</string>
    <string name="Homme">Homme</string>
    <string name="Contact">Contact</string>
    <string name="from_date">From Date</string>
    <string name="ConfirmationMotDePasse">Confirmation Mot de passe</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmail">Confirmation de l\'E-Mail</string>
    <string name="Budget">Budget</string>
    <string name="nameActivity1">CHTI DELIRE</string>
    <string name="distanceActivity1">0.9 km</string>
    <string name="themeActivity1">Sport</string>
    <string name="dateActivity1">24 octobre 2017</string>
    <string name="timeActivity1">10h - 19h</string>
    <string name="priceActivity1">€ €</string>
    <string name="namePlaceActivity1">Le stadium</string>
    <string name="addressActivity1">L\'adresse du stadium qui m\'est inconnue</string>
    <string name="placeActivity1">Extérieur</string>
    <string name="capacityActivity1">2 000 personnes</string>
    <string name="contentDescriptionActivity1">orem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id neque justo. Aliquam congue lectus sit amet ipsum semper finibus. Morbi posuere porta sem a ornare. In sagittis nibh purus, non tincidunt eros mattis vel. Pellentesque ac condimentum justo, et pretium est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget euismod leo. Fusce dictum sit amet sapien vitae rhoncus. Mauris tincidunt est enim, congue suscipit est pretium id. In ut nisl a risus condimentum maximus. Donec id tortor metus. Nulla consequat sem ut odio aliquam, a venenatis nulla pretium. Morbi fringilla id augue a pharetra. Nam id eleifend enim. Donec a arcu vitae lectus mollis semper. Fusce mollis ligula et porttitor faucibus.
Vivamus tincidunt lobortis nisl eu efficitur. Donec ac sem nec neque bibendum finibus. Sed sit amet vestibulum nisl. Phasellus laoreet ac enim vitae dictum. Proin vitae rutrum lectus, ac placerat lorem. Vivamus ipsum orci, volutpat egestas ultrices vel, volutpat et tellus. Aliquam erat volutpat. Morbi tincidunt risus ac nunc ullamcorper, ac interdum ante scelerisque. Quisque lacinia, eros vel consequat pulvinar, est orci maximus ipsum, ac laoreet nisi tellus at dolor. Nullam et felis risus. Ut lacinia urna vitae ultrices imperdiet. Proin viverra mi augue, sed congue velit laoreet ac. Maecenas efficitur ullamcorper ultricies. </string>
    <string name="button1Activity1">Contacter</string>
    <string name="button2Activity1">J\'y vais</string>
    <string name="nameActivity2">LA PISCINE</string>
    <string name="distanceActivity2">1.2 km</string>
    <string name="themeActivity2">Sport</string>
    <string name="dateActivity2">24 octobre 2017</string>
    <string name="timeActivity2">10h - 19h</string>
    <string name="priceActivity2">€</string>
    <string name="namePlaceActivity2">Le stadium</string>
    <string name="addressActivity2">L\'adresse du stadium qui m\'est inconnue</string>
    <string name="placeActivity2">Extérieur</string>
    <string name="capacityActivity2">2 000 personnes</string>
    <string name="contentDescriptionActivity2">orem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id neque justo. Aliquam congue lectus sit amet ipsum semper finibus. Morbi posuere porta sem a ornare. In sagittis nibh purus, non tincidunt eros mattis vel. Pellentesque ac condimentum justo, et pretium est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget euismod leo. Fusce dictum sit amet sapien vitae rhoncus. Mauris tincidunt est enim, congue suscipit est pretium id. In ut nisl a risus condimentum maximus. Donec id tortor metus. Nulla consequat sem ut odio aliquam, a venenatis nulla pretium. Morbi fringilla id augue a pharetra. Nam id eleifend enim. Donec a arcu vitae lectus mollis semper. Fusce mollis ligula et porttitor faucibus.
Vivamus tincidunt lobortis nisl eu efficitur. Donec ac sem nec neque bibendum finibus. Sed sit amet vestibulum nisl. Phasellus laoreet ac enim vitae dictum. Proin vitae rutrum lectus, ac placerat lorem. Vivamus ipsum orci, volutpat egestas ultrices vel, volutpat et tellus. Aliquam erat volutpat. Morbi tincidunt risus ac nunc ullamcorper, ac interdum ante scelerisque. Quisque lacinia, eros vel consequat pulvinar, est orci maximus ipsum, ac laoreet nisi tellus at dolor. Nullam et felis risus. Ut lacinia urna vitae ultrices imperdiet. Proin viverra mi augue, sed congue velit laoreet ac. Maecenas efficitur ullamcorper ultricies. </string>
    <string name="button1Activity2">Contacter</string>
    <string name="button2Activity2">J\'y vais</string>
    <string name="nameActivity3">CROSS FIT</string>
    <string name="distanceActivity3">3.4 km</string>
    <string name="themeActivity3">Sport</string>
    <string name="dateActivity3">24 octobre 2017</string>
    <string name="timeActivity3">10h - 19h</string>
    <string name="priceActivity3">€ € €</string>
    <string name="namePlaceActivity3">Le stadium</string>
    <string name="addressActivity3">L\'adresse du stadium qui m\'est inconnue</string>
    <string name="placeActivity3">Extérieur</string>
    <string name="capacityActivity3">2 000 personnes</string>
    <string name="contentDescriptionActivity3">orem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id neque justo. Aliquam congue lectus sit amet ipsum semper finibus. Morbi posuere porta sem a ornare. In sagittis nibh purus, non tincidunt eros mattis vel. Pellentesque ac condimentum justo, et pretium est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget euismod leo. Fusce dictum sit amet sapien vitae rhoncus. Mauris tincidunt est enim, congue suscipit est pretium id. In ut nisl a risus condimentum maximus. Donec id tortor metus. Nulla consequat sem ut odio aliquam, a venenatis nulla pretium. Morbi fringilla id augue a pharetra. Nam id eleifend enim. Donec a arcu vitae lectus mollis semper. Fusce mollis ligula et porttitor faucibus.
Vivamus tincidunt lobortis nisl eu efficitur. Donec ac sem nec neque bibendum finibus. Sed sit amet vestibulum nisl. Phasellus laoreet ac enim vitae dictum. Proin vitae rutrum lectus, ac placerat lorem. Vivamus ipsum orci, volutpat egestas ultrices vel, volutpat et tellus. Aliquam erat volutpat. Morbi tincidunt risus ac nunc ullamcorper, ac interdum ante scelerisque. Quisque lacinia, eros vel consequat pulvinar, est orci maximus ipsum, ac laoreet nisi tellus at dolor. Nullam et felis risus. Ut lacinia urna vitae ultrices imperdiet. Proin viverra mi augue, sed congue velit laoreet ac. Maecenas efficitur ullamcorper ultricies. </string>
    <string name="button1Activity3">Contacter</string>
    <string name="button2Activity3">J\'y vais</string>
    <string name="nameActivity4">Z\'ANE ATTITUDE</string>
    <string name="distanceActivity4">1.7 km</string>
    <string name="themeActivity4">Sport</string>
    <string name="dateActivity4">24 octobre 2017</string>
    <string name="timeActivity4">10h - 19h</string>
    <string name="priceActivity4">€ €</string>
    <string name="namePlaceActivity4">Le stadium</string>
    <string name="addressActivity4">L\'adresse du stadium qui m\'est inconnue</string>
    <string name="placeActivity4">Extérieur</string>
    <string name="capacityActivity4">2 000 personnes</string>
    <string name="contentDescriptionActivity4">orem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id neque justo. Aliquam congue lectus sit amet ipsum semper finibus. Morbi posuere porta sem a ornare. In sagittis nibh purus, non tincidunt eros mattis vel. Pellentesque ac condimentum justo, et pretium est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget euismod leo. Fusce dictum sit amet sapien vitae rhoncus. Mauris tincidunt est enim, congue suscipit est pretium id. In ut nisl a risus condimentum maximus. Donec id tortor metus. Nulla consequat sem ut odio aliquam, a venenatis nulla pretium. Morbi fringilla id augue a pharetra. Nam id eleifend enim. Donec a arcu vitae lectus mollis semper. Fusce mollis ligula et porttitor faucibus.
Vivamus tincidunt lobortis nisl eu efficitur. Donec ac sem nec neque bibendum finibus. Sed sit amet vestibulum nisl. Phasellus laoreet ac enim vitae dictum. Proin vitae rutrum lectus, ac placerat lorem. Vivamus ipsum orci, volutpat egestas ultrices vel, volutpat et tellus. Aliquam erat volutpat. Morbi tincidunt risus ac nunc ullamcorper, ac interdum ante scelerisque. Quisque lacinia, eros vel consequat pulvinar, est orci maximus ipsum, ac laoreet nisi tellus at dolor. Nullam et felis risus. Ut lacinia urna vitae ultrices imperdiet. Proin viverra mi augue, sed congue velit laoreet ac. Maecenas efficitur ullamcorper ultricies. </string>
    <string name="button1Activity4">Contacter</string>
    <string name="button2Activity4">J\'y vais</string>
    <string name="nameActivity5">ESCRIME</string>
    <string name="distanceActivity5">6.0 km</string>
    <string name="themeActivity5">Sport</string>
    <string name="dateActivity5">24 octobre 2017</string>
</resources>