<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewEventFourthPage">

    <ProgressBar
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:indeterminate="false"
        android:progress="80"
        android:progressTint="@android:color/holo_orange_dark"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="28dp" />

<!-- A TRANSFORMER EN 3 BOUTONS: SI LE 2e EST COCHE, ON COCHE AUSSI CELUI D AVANT, SI LE 3E EST COCHE, ON COCHE LES DEUX D AVANT-->

    <LinearLayout
        android:id="@+id/LinearBudgetSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Budget"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/LinearBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/BugetCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <CheckBox
                android:id="@+id/BugetCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <CheckBox
                android:id="@+id/BugetCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearMoyenPaiementSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MoyenPaiement"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/LinearMoyenPaiement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ChecboxCB"
                android:text="@string/CarteBleue"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ChecboxCheque"
                android:text="@string/Cheque"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ChecboxEspeces"
                android:text="@string/Especes"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ChecboxAutre"
                android:text="@string/Autre"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearEnvironnementSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Environnement"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#ffffff" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Radio_Interieur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Interieur"
                />

            <RadioButton
                android:id="@+id/Radio_Exterieur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exterieur"
                />

            <RadioButton
                android:id="@+id/Radio_LesDeux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LesDeux"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearCapaciteSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Capacite"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="110dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personne"/>

            <CheckBox
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SansLimite"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearAccessibilite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Accessibilite"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:orientation="horizontal">
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#000000">

                <LinearLayout
                    android:id="@+id/buttonContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pmr"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malentendant"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malvoyant"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enfant"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agee"/>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="right"
                android:src="@drawable/left_clickable" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/buttonSecondAddUserPage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"

                android:clickable="true"
                android:src="@drawable/right_clickable" />
        </LinearLayout>
    </LinearLayout>


    


</LinearLayout>