<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewEventFirstPage">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:indeterminate="false"
        android:progress="20"
        android:progressTint="@android:color/holo_orange_dark"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="28dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:text="@string/AddUserEtape1"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/TextTitreEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Titre"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/TitreEvent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/TextDescriptionEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id ="@+id/descriptionEvent"
            android:layout_width ="match_parent"
            android:layout_height ="0dp"
            android:layout_weight ="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines ="4"
            android:maxLength ="500"
            android:ems="500"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scrollHorizontally="false"
            android:verticalScrollbarPosition="right"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bonjour"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_gravity="bottom">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/image"/>
        
        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectImage"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="right"
                android:src="@drawable/left_unclickable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/buttonValidateNewEvent1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:clickable="true"
                android:src="@drawable/right_clickable"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>